--- a/externaljs.html
+++ b/externaljs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>External JS Example</title>
-  <script src="script.js"></script>
+  <script src="externaljs.js"></script>
 </head>
 <body>
   <button onclick="greet()">Click Me</button>
